--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "nextra-docs-template",
+  "name": "custom-ui-docs",
   "version": "0.0.1",
-  "description": "Nextra docs template",
+  "description": "docs for custom-ui",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -9,14 +9,13 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/shuding/nextra-docs-template.git"
+    "url": "git+https://github.com/Ricy137/custom-ui-doc.git"
   },
-  "author": "Shu Ding <g@shud.in>",
+  "author": "Ricy @MaryChao21",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/shuding/nextra-docs-template/issues"
+    "url": "https://github.com/Ricy137/custom-ui-doc/issues"
   },
-  "homepage": "https://github.com/shuding/nextra-docs-template#readme",
   "dependencies": {
     "@floating-ui/react": "^0.26.5",
     "@react-spring/web": "^9.7.3",
